Fixed navbar issue. It now is behind intro picture. Fixed position so it will be at the top of the page once you scroll past it

--- a/src/component/Intro/Intro.module.css
+++ b/src/component/Intro/Intro.module.css
@@ -1,18 +1,26 @@
 .Intro{
     height:800px;
-    width:100%;
-    margin-top:20px;
+    width:102%;
+    margin-top: -50px;
     background: linear-gradient( rgba(184, 61, 53, 0.6), rgba(100, 89, 211, 0.6)), url("../../assets/images/beach_dock.jpg");
     background-repeat: no-repeat;
-    background-size:cover;
-    
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: 100% 100%;
+    z-index: 100;
+    position: relative;
 }
 
 .Intro h1{
     padding-top:40px;
     text-decoration: underline;
     color:white;
-    
+    text-align: center;
+    vertical-align: center;
+    line-height: 400px;
+    font-size: 3em;
+
 }
 
 .Intro p{
